# Algorithms

AlienChefs/: AlienChefs.pro  main.cpp
FluShotLineup/: FluShotLineup.pro  main.cpp
KnapsackProblem/: KnapsackProblem.pro  main.cpp
MaxPalindrome/MaxPalindrome/: main.cpp
MaxPalindrome/MaxPalindrome.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MaxPalindrome/MaxPalindrome.xcodeproj/project.xcworkspace/xcuserdata/nomenas.xcuserdatad/: UserInterfaceState.xcuserstate
MaxPalindrome/MaxPalindrome.xcodeproj/xcuserdata/nomenas.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MaxPalindrome/MaxPalindrome/MaxPalindrome/: main.cpp
MaxPalindrome/MaxPalindrome/MaxPalindrome.xcodeproj/: project.pbxproj
MazeOfDigits/: MazeOfDigits.pro  main.cpp  testdata.txt
MinHeap/: MinHeap.cpp
ObstacleCourse/: ObstacleCourse.pro  main.cpp
ObstacleCourse/ObstacleCourse/: main.cpp
ObstacleCourse/ObstacleCourse.xcodeproj/: project.pbxproj
ObstacleCourse/ObstacleCourse.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SomeMoreHomework/: SomeMoreHomework.pro  main.cpp
StonePile/: StonePile.pro  main.cpp
TravelingPlan/: TravelingPlan.pro  main.cpp
hackerrank/: .main.cpp  CMakeLists.txt  angryprofessor.cpp  binarysearch.cpp  dijkstra.cpp  hackerrank.pro  heap.h  inputfromfile.cpp  iostreamformating_piramide.cpp  iostreamformating_printingfloat.cpp  lisasworkbook.cpp  sherlockandthebeast.cpp  stdheap.h  timeconversion.cpp
hackerrank/datastructures/arrays/: 2DArrayDS.cpp  ArrayManipulation.cpp  dynamicarray.cpp  sparsearrays.cpp
hackerrank/datastructures/disjointset/: componentsinagraph.cpp  mergingcommunities.cpp
hackerrank/datastructures/heap/: heap.cpp
hackerrank/datastructures/stacks/: balancedarentheses.cpp
hackerrank/datastructures/tries/: contacts.cpp  swapnodes.cpp
hackerrank/dynamicprogramming/: candies.cpp  candieswithreorder.cpp  fibonaccimodified.cpp  mandragoraforest.cpp  nikitaandthegame.cpp  redjohnisback.cpp  thecoinchangeproblem.cpp  themaximumsubarray.cpp
hackerrank/formating/: piramide.cpp  printingfloat.cpp
hackerrank/graphs/: shortestreach.cpp  synchronousshopping.cpp
hackerrank/implementation/: angryprofessor.cpp  biggerisgreater.cpp  caesarcipher.cpp  cavitymap.cpp  chocolatefeast.cpp  cutthesticks.cpp  finddigits.cpp  jumpingontheclouds.cpp  lisasworkbook.cpp  nondivisiblesubset.cpp  repeatedstring.cpp  savetheprisoner.cpp  servicelane.cpp  sherlockandsquares.cpp  sherlockandthebeast.cpp  strangecounter.cpp  thegridsearch.cpp  timeconversion.cpp  utopiantree.cpp
hackerrank/search/: sherlockandarray.cpp
hackerrank/sorting/: binarysearch.cpp
hackerrank/utils/: heap.h  ostream.h  utils.h  xlong.h
(+4 files in other folders)
